Removed explicit width assigned to textarea of activity form.So, this resolved the overlap issue of textarea and action icons beside.

--- a/app/assets/stylesheets/activities_tasks.css.scss
+++ b/app/assets/stylesheets/activities_tasks.css.scss
@@ -164,7 +164,6 @@ button.rui-btn {
 
 textarea#activity_input {
   resize: vertical;
-  width: 430px;
   height: 20px;
 }
 
